<resources>
    <string name="app_name">FindESTG</string>
    <string name="sala">Sala</string>
    <string name="auditorio">Auditório</string>
    <string name="servico">Serviço</string>
    <string name="localizacoes_button">Localizações</string>
    <string name="meus_favoritos_button">Meus Favoritos</string>
    <string name="descricao_text_view">Descrição</string>
    <string name="ver_mais_button">Ver +</string>
    <string name="nav_home">Home</string>
    <string name="nav_lista_favoritos">Lista Favoritos</string>
    <string name="nav_idioma">Idioma</string>
    <string name="nav_logout">Logout</string>
    <string name="navigation_drawer_open">open</string>
    <string name="navigation_drawer_close">close</string>
    <string name="email_utilizador">Email Utilizador</string>
    <string name="desejo_navegar_com_a_bussola">Deseja navegar com a bussola?</string>
    <string name="cancelar_button">Tentar outra vez</string>
    <string name="confirmar_button">Confirmar Localização</string>
    <string name="qr_scanner_button">QR SCANNER</string>
    <string name="text_qr_code_o_que_fazer">Faça o scan do código QR para saber a sua localização atual:</string>
    <string name="voltar_button">Voltar</string>
    <string name="filtrar_por_text">Filtrar por</string>
    <string name="escolha_o_que_quer_text">Esclha o que quer ver</string>
</resources>