<?xml version="1.0" encoding="utf-8"?>

<androidx.drawerlayout.widget.DrawerLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:openDrawer="start"
    android:orientation="horizontal">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="10dp"
        tools:context=".QrCode_MainActivity"
        android:orientation="vertical">

        <Button
            android:id="@+id/backButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/voltar_button"
            android:layout_gravity="start"
            android:layout_marginTop="70dp"
            android:layout_marginStart="10dp"
            android:backgroundTint="@color/yellow"
            android:textColor="@color/black"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:text="Faça o scan do código QR para saber a sua localização atual:"
            android:textSize="20dp"
            android:layout_margin="20dp"
            android:textColor="@color/black"
            android:backgroundTint="@color/yellow"
            android:layout_above="@id/scanner"/>

        <Button
            android:id="@+id/scanner"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_above="@id/text"
            android:layout_centerHorizontal="true"
            android:layout_gravity="center"
            android:backgroundTint="@color/yellow"
            android:text="@string/qr_scanner_button"
            android:textColor="@color/black" />

        <TextView
            android:id="@+id/text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="20dp"
            android:layout_margin="10dp"
            android:textColor="@color/black"
            android:backgroundTint="@color/yellow"
            android:layout_centerInParent="true"
            android:gravity="center"/>

        <LinearLayout
            android:id="@+id/linha1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="5dp"
            android:paddingEnd="10dp"
            android:paddingStart="10dp"
            android:layout_below="@id/text">

            <Button
                android:id="@+id/button_confirm"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/confirmar_button"
                android:textColor="@color/black"
                android:backgroundTint="@color/yellow"
                android:onClick="confirmarLocalizacao"
                android:textSize="13sp"
                android:visibility="gone"/>

            <Button
                android:id="@+id/button_cancel"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:layout_weight="1"
                android:textSize="13sp"
                android:text="@string/cancelar_button"
                android:textColor="@color/black"
                android:backgroundTint="@color/yellow"
                android:onClick="cancelarLocalizacao"
                android:visibility="gone"/>

        </LinearLayout>

        <Button
            android:id="@+id/button_navegar_com_bussola"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:textColor="@color/black"
            android:backgroundTint="@color/yellow"
            android:textSize="13sp"
            android:layout_below="@+id/linha1"
            android:text="@string/desejo_navegar_com_a_bussola"
            android:onClick="navegar_bussola"
            android:layout_marginTop="20dp"
            android:visibility="gone"/>

    </RelativeLayout>

    <include
        layout="@layout/menu_topbar"
        android:layout_width="match_parent"
        android:layout_height="match_parent"/>

    <com.google.android.material.navigation.NavigationView
        android:id="@+id/nav_view"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        android:fitsSystemWindows="true"
        app:headerLayout="@layout/menu_header"
        app:menu="@menu/nav_menu"/>
</androidx.drawerlayout.widget.DrawerLayout>